# E-Module

./: CMakeLists.txt  README.md
src/: BaseEvent.cpp  BaseEvent.h  Definitions.h  EventType.cpp  EventType.h  IEvent.h  IEventListener.h  IEventManager.h  ISerializable.h  IStream.h  Singleton.h  StandardEventManager.cpp  StandardEventManager.h
